# spo

spo_lab1/: CMakeLists.txt  Makefile  README.md  main.c
spo_lab1/hfs_task/: hfs_structures.c  hfs_structures.h  utils.c  utils.h
spo_lab2/: CMakeLists.txt  Makefile  README.md  main.php
spo_lab2/disks_partitions_task/: partition.c  partition.h
spo_lab2/hfs_task/: hfs_structures.c  utils.c  utils.h
spo_lab3/: CMakeLists.txt  Makefile  README.md  client.c  common.h  gui.c  main.c  server.c
